examples/negative/type_errors/L2/7_bool_lower_limit_for.ob
MODULE BoolLowLimFor;

VAR x,y: INTEGER;

BEGIN
  x := 42;
  FOR y := TRUE TO 10 DO
    x := x + 1
  END
END BoolLowLimFor.
